--- a/web/index.html
+++ b/web/index.html
@@ -20,17 +20,26 @@
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="A new Flutter project.">
 
+  <meta name="referrer" content="no-referrer-when-downgrade">
+  
+  <meta name="google-signin-client_id" content="YOUR_CLIENT_ID.apps.googleusercontent.com">
+
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="flourish_web">
+  
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
+  
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
   <title>flourish_web</title>
   <link rel="manifest" href="manifest.json">
+
+  <script src="assets/packages/flutter_tex/js/flutter_tex.js"></script>
+  <script type="text/javascript">window.flutterWebRenderer = "canvaskit";</script>
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
