--- a/web/index.html
+++ b/web/index.html
@@ -14,11 +14,11 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-  <base href="$FLUTTER_BASE_HREF">
+
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="Interactive study tool.">
 
   <meta name="referrer" content="no-referrer-when-downgrade">
   
@@ -37,9 +37,6 @@
 
   <title>flourish_web</title>
   <link rel="manifest" href="manifest.json">
-
-  <script src="assets/packages/flutter_tex/js/flutter_tex.js"></script>
-  <script type="text/javascript">window.flutterWebRenderer = "canvaskit";</script>
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
