--- a/web/index.html
+++ b/web/index.html
@@ -28,7 +28,7 @@
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="flourish_web">
+  <meta name="apple-mobile-web-app-title" content="studybeats">
   
   <!-- Android meta tags & icons -->
   <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
@@ -52,7 +52,7 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>flourish_web</title>
+  <title>studybeats</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
