--- a/web/index.html
+++ b/web/index.html
@@ -1,4 +1,6 @@
-<!DOCTYPE html><html><head>
+<!DOCTYPE html>
+<html>
+<head>
   <!--
     If you are serving your web app in a path other than the root, change the
     href value below to reflect the base path you are serving from.
@@ -14,13 +16,10 @@
   -->
   <base href="/">
 
-
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="Interactive study tool.">
-
   <meta name="referrer" content="no-referrer-when-downgrade">
-  
   <meta name="google-signin-client_id" content="YOUR_CLIENT_ID.apps.googleusercontent.com">
 
   <!-- iOS meta tags & icons -->
@@ -56,23 +55,19 @@
   <link rel="preload" href="main.dart.js" as="script">
   <link rel="preload" href="splash/img/light-1x.png" as="image">
 
-  
-  
-  
+  <script src="flutter.js" defer></script>
   
   <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
   <style id="splash-screen-style">
     html {
       height: 100%
     }
-
     body {
       margin: 0;
       min-height: 100%;
       background-color: #101414;
-          background-size: 100% 100%;
+      background-size: 100% 100%;
     }
-
     .center {
       margin: 0;
       position: absolute;
@@ -81,24 +76,23 @@
       -ms-transform: translate(-50%, -50%);
       transform: translate(-50%, -50%);
     }
-
     .contain {
-      display:block;
-      width:100%; height:100%;
+      display: block;
+      width: 100%;
+      height: 100%;
       object-fit: contain;
     }
-
     .stretch {
-      display:block;
-      width:100%; height:100%;
+      display: block;
+      width: 100%;
+      height: 100%;
     }
-
     .cover {
-      display:block;
-      width:100%; height:100%;
+      display: block;
+      width: 100%;
+      height: 100%;
       object-fit: cover;
     }
-
     .bottom {
       position: absolute;
       bottom: 0;
@@ -106,20 +100,18 @@
       -ms-transform: translate(-50%, 0);
       transform: translate(-50%, 0);
     }
-
     .bottomLeft {
       position: absolute;
       bottom: 0;
       left: 0;
     }
-
     .bottomRight {
       position: absolute;
       bottom: 0;
       right: 0;
     }
   </style>
-  <script id="splash-screen-script">
+  <script id="splash-screen-script" defer>
     function removeSplashFromWeb() {
       document.getElementById("splash")?.remove();
       document.getElementById("splash-branding")?.remove();
@@ -134,7 +126,7 @@
       <img class="center" aria-hidden="true" src="splash/img/light-1x.png" alt="">
   </picture>
   
-  <script src="flutter_bootstrap.js" async=""></script>
-
-
-</body></html>
+  <script src="flutter_bootstrap.js" defer></script>
+  
+</body>
+</html>
