added basic spotify web sdk playback

--- a/web/index.html
+++ b/web/index.html
@@ -46,6 +46,9 @@
   <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
 
+  <script src="https://sdk.scdn.co/spotify-player.js"></script>
+  <script src="spotify_player_interop.js"></script> 
+
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png">
 
